<resources>
    <string name="app_name">hackgt22</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="landing_text">Customizable.\n\nModular.\n\nYours.</string>
    <string name="TOU_txt">By clicking CONTINUE, you agree to our <a href="https://github.com/s-hliao/FBLA-Mobile-App-2019/blob/master/Terms%20and%20Conditions.md">Terms of Use and Licensing</a></string>
    <string name="sign_in_button_txt">Continue</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">5574970209255904</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb5574970209255904</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_forum">Forum</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_help">Help</string>

    <string name="menu_plant_grid">Plant Grid</string>
    <string name="menu_plant_info">Plant Info</string>
    <string name="menu_warning">Warning</string>
    <string name="menu_reservoir">Reservoir</string>
    <string name="menu_farm">Farm</string>

    <string name="AMA">Ask us anything.</string>
    <string name="contact_us">Contact Us</string>
    <string name ="menu_refresh">Refresh</string>

</resources>