<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_baseline_bar_chart_24"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/nav_forum"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/menu_forum" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/menu_help" />
    </group>
</menu>