<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hackgt22.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_stats"
        android:name="com.example.hackgt22.ui.StatsFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/nav_forum"
        android:name="com.example.hackgt22.ui.ForumFragment"
        android:label="@string/menu_forum"
        tools:layout="@layout/fragment_forum" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.hackgt22.ui.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.hackgt22.ui.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />
</navigation>