<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/text_TOC"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:orientation="vertical"
    tools:context=".LandingFragment">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:cropToPadding="false"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:minWidth="200dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:src="@drawable/ic_baseline_grass_24" />

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight=".1"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:text="@string/landing_text"
        android:textAlignment="center"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/terms_of_use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_weight=".1"
        android:text="@string/TOU_txt"
        android:textAlignment="center"
        android:textSize="12sp"
        app:autoSizeTextType="none" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_weight=".1"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/sign_in_button_txt"
        android:textColor="#FFFFFF" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:paddingBottom="200dp" />


</androidx.appcompat.widget.LinearLayoutCompat>